# weather-lion-cli

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/commands/: mod.rs  spinner.rs  temperature.rs  weather_forecast.rs
