[package]
name = "weather-lion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.4.0", features = ["json", "charset"] }
serde = { version = "1", features = ["derive"] }
indicatif = { version = "0.17.0-rc.10"}
colored = "2.0.0"
clap = { version = "3.1.18", features = ["derive"] }
anyhow = "1.0.57"
clap_complete = "3.1.4"
