[package]
name = "weather-lion"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.5.0", features = ["json", "charset"] }
serde = { version = "1.0.144", features = ["derive"] }
indicatif = "0.17.0"
colored = "2.0.0"
clap = { version = "3.2.20", features = ["derive"] }
anyhow = "1.0.64"
clap_complete = "3.2.4"
